--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
     </style>
 
     <body>
-        <h1>Build-A-Blog!</h1>
+        <h1><a href="http://localhost:8080/blog">Build-A-Blog!</a></h1>
 
         {% block content %}
         {% endblock %}
