--- a/templates/blog.html
+++ b/templates/blog.html
@@ -4,7 +4,7 @@
 
     {% for blog in top5_blog_posts %}
         <div class="blog">
-            <div class="blog-title">{{blog.title}}</div>
+            <a href="http://localhost:8080/blog/{{blog.key().id()}}">{{blog.title}}</a>
             <pre class="blog-body">{{blog.body}}</pre>
         </div>
     {% endfor %}
